@@ -18,6 +18,8 @@ v6.3.0-git
 v6.2.2
 ------
 
+[mms] Fix expiring session cached mailbox data when mailbox information
+      changes.
 [mms] Fix updating viewport immediately after deleting messages on POP3
       servers.
 
